infrastructure/istio/gateways/internal-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: internal-gateway
  namespace: platform
spec:
  selector:
    istio: ingressgateway

  servers:
    - port:
        number: 8443
        name: internal-https
        protocol: HTTPS
      hosts:
        - "*.svc.cluster.local"
      tls:
        mode: ISTIO_MUTUAL
